--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ssr-example",
   "scripts": {
     "start:server": "node server",
-    "scaffold": "mst-gql --roots Todo --excludes CacheControlScope,Query,Subscription --outDir src/models/ --format js http://localhost:4000/graphql",
+    "scaffold": "mst-gql --roots Todo,User --excludes CacheControlScope,Query,Subscription --outDir src/models/ --format js http://localhost:4000/graphql",
     "client:dev": "next",
     "client:build": "next build",
     "start:client": " next start",
