--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "private": true,
   "name": "mst-gql-next",
   "scripts": {
-    "start:server": "node server",
-    "scaffold": "mst-gql --roots Todo,User --outDir models/ --format js http://localhost:4000/graphql",
-    "client:dev": "next",
-    "dev": "run-p start:server client:dev",
+    "dev": "nodemon --watch server server/index.js",
+    "scaffold": "mst-gql --roots Todo,User --outDir models/ --format js http://localhost:3000/api/graphql",
     "build": "next build",
-    "start:client": "next start",
-    "start": "run-p start:server start:client"
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "dependencies": {
-    "apollo-server": "^2.9.3",
-    "graphql": "^14.5.4",
+    "apollo-server-express": "^2.9.3",
+    "cross-env": "^5.2.1",
+    "express": "^4.17.1",
+    "graphql-deduplicator": "^2.0.5",
     "graphql-request": "^1.8.2",
-    "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "mobx-state-tree": "^3.14.1",
     "mst-gql": "^0.4.0",
     "next": "^9.0.5",
-    "npm-run-all": "^4.1.5",
+    "nodemon": "^1.19.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0"
